apps/base/tayle/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        app.jimwilleke.com/component: app
    spec:
      imagePullSecrets:
        - name: github-container-registry-secret
      containers:
        - name: app
          # NOTE: this image is replaced with an images transformer in the overlay: https://kubectl.docs.kubernetes.io/references/kustomize/builtins/#_imagetagtransformer
          image: tayle-image-app

          # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.6"
              memory: "0.6Gi"

          ports:
            - containerPort: 3100

          readinessProbe:
            httpGet:
              path: /
              port: 3100
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3100
            initialDelaySeconds: 10
            periodSeconds: 10
