apps/base/tayle/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        app.activescott.com/component: rabbitmq
    spec:
      containers:
        - name: rabbitmq

          # NOTE: this image is replaced with an images transformer in the overlay: https://kubectl.docs.kubernetes.io/references/kustomize/builtins/#_imagetagtransformer
          image: tayle-image-rabbitmq

          # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: 500m
              memory: "100Mi"

          # https://www.rabbitmq.com/blog/2020/08/10/deploying-rabbitmq-to-kubernetes-whats-involved#readiness-probe
          readinessProbe: # probe to know when RMQ is ready to accept traffic
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10

          # https://www.rabbitmq.com/blog/2020/08/10/deploying-rabbitmq-to-kubernetes-whats-involved#liveness-probe
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 60
            # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
            periodSeconds: 60
            timeoutSeconds: 15

          ports:
            - containerPort: 5672
            - containerPort: 15672

          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq

  # set the .spec.volumeClaimTemplates field to create a PersistentVolumeClaim
  #   https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#volume-claim-templates
  #   https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/stateful-set-v1/#StatefulSetSpec
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        storageClassName: "" # Empty string must be explicitly set otherwise default StorageClass will be set
        accessModes: ["ReadWriteOnce"]
        # volumeName is the binding reference to the PersistentVolume backing this claim.
        # create a PersistentVolume in the overlay and patch in it's name here:
        # NOTE: It is useful to patch this because PVs are non-namespaced resources, so we may want to have different ones for each overlay
        volumeName: PATCH_WITH_CUSTOMIZE
        resources:
          requests:
            # the minimum amount that must be available:
            storage: 1Gi
